Bio with styling

--- a/01/Bio/index.html
+++ b/01/Bio/index.html
@@ -11,7 +11,7 @@
     <h2>Mogamat Muneer Miller</h2>
     <img src="Profile_Pic.jpg" style="width: 300px; height: 300px;" alt="My Picture">
     <p>
-        Hi, my name is MogaMmat Muneer Miller. I am 22 years old. I'm a Software Developer, Front-End Web Developer and an Aspiring Full-Stack Web developer
+        Hi, my name is Mogamat Muneer Miller. I am 22 years old. I'm a Software Developer, Front-End Web Developer and an Aspiring Full-Stack Web developer
     </p>
     </section>
     
